# hakyll-journal-example

./: .gitignore  README.md  about.md  hakyll-journal-example.cabal  index.html  journal.cabal  journal.hs
css/: default.css
templates/: base.html  default.html  post-list.html  post.html
