name:          hakyll-journal-example
version:       0.1.0
synopsis:      an example Hakyll Journal site

description:   TODO

license:       MIT
license-file:  LICENSE.md
copyright:     Copyright (c) 2014, Travis Cardwell and Rob Nugen
author:        Travis Cardwell <travis.cardwell@extellisys.com>
maintainer:    Travis Cardwell <travis.cardwell@extellisys.com>
stability:     experimental
homepage:      https://github.com/thunderrabbit/hakyll-journal-example
bug-reports:   https://github.com/thunderrabbit/hakyll-journal-example/issues
category:      Web, Hakyll
build-type:    Simple
cabal-version: >= 1.18

executable journal
  main-is:            journal.hs
  ghc-options:        -Wall -O2 -threaded
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:      base >= 4.7,
                      hakyll >= 4.5,
                      hakyll-journal >= 0.1
